# Light-L16-RMI

./: .gitignore  Dockerfile  Makefile  PROTOCOL.md  README.md  build_client.sh  build_release_zip.sh  docker_build.sh  payload.s  rmi.config  rmi_client.ini
client/: CMakeLists.txt  README.md
client/src/: main.cpp  net.cpp  net.h  rmi_client.cpp  rmi_client.h  stb_image.cpp
protocol/: rmi_protocol.c  rmi_protocol.h
server/: exploit.c  main.c  payload.s  rmi.c
